--- a/css/style.css
+++ b/css/style.css
@@ -100,17 +100,18 @@ body,html{
 }
 
 .index a{
-    width: 50%;
+    font-family: "montserrat",sans-serif;
+    width: 30%;
     text-decoration: none;
     border:0;
     background: none;
     display:block;
-    margin:20px auto;
+    margin:15px auto;
     text-align: center;
     border:2px solid #2ecc71;
-    padding:14px;
+    padding:12.5px;
     outline:none;
-    font-size:20px;
+    font-size:15px;
     color:white;
     border-radius: 24px;
     transition:0.25s;
