--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,10 @@ body,html{
     transition:0.8s;
 }
 
+.box a:hover{
+    background: #2ecc71 ;
+}
+
 .index{
     width: 300px;
     padding:0px;
