--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,8 @@ body,html{
 
 
 .table{
-    width: 300px;
+    white-space: nowrap;
+    overflow: hidden;
     padding:40px;
     position:absolute;
     top: 50%;
@@ -142,10 +143,14 @@ body,html{
     transform: translate(-50%,-50%);
     background: #191919;
     text-align: center;
+
 }
 
 
 table  th{
+    white-space: nowrap;
+    overflow: hidden;
+    table-layout: fixed;
     padding:15px;
     color: azure;
     font-size:19px;
@@ -153,7 +158,9 @@ table  th{
 }
 
 table td{
-
+    white-space: nowrap;
+    overflow: hidden;
+    table-layout: fixed;
     padding:15px;
     color:azure;
     font-size:19px;
@@ -180,12 +187,13 @@ table td:nth-child(5){
     outline:none;
     color:azure;
     width:100px;
-    top:70%;
-    bottom:30%;
+
+    right: 7%;
+    top:85%;
     transition:0.25s;
     cursor:pointer;
     background: #191919;
-    float:none;
+    float:right;
 }
 
 a{
